[package]
name = "derive-docs"
description = "A tool for generating documentation from Rust derive macros"
version = "0.1.42"
edition = "2021"
license = "MIT"
repository = "https://github.com/KittyCAD/modeling-app"
rust-version = "1.73"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
Inflector = "0.11.4"
convert_case = "0.6.0"
once_cell = "1.20.2"
proc-macro2 = "1"
quote = "1"
regex = "1.11"
serde = { version = "1.0.217", features = ["derive"] }
serde_tokenstream = "0.2"
syn = { version = "2.0.96", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.95"
expectorate = "1.1.0"
pretty_assertions = "1.4.1"
rustfmt-wrapper = "0.2.1"

[lints]
workspace = true
