[package]
name = "wasm-lib-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
wasm-lib = { path = ".." }
kcl-lib = { path = "../kcl" }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_parse_and_lex"
path = "fuzz_targets/fuzz_parse_and_lex.rs"
test = false
doc = false
