[package]
name = "kcl-test-server"
description = "A test server for KCL"
version = "0.1.7"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.86"
hyper = { version = "0.14.29", features = ["server"] }
kcl-lib = { version = "0.2", path = "../kcl" }
pico-args = "0.5.0"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
