[package]
name = "kcl-test-server"
description = "A test server for KCL"
version = "0.1.42"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.95"
hyper = { version = "0.14.29", features = ["http1", "server", "tcp"] }
kcl-lib = { version = "0.2", path = "../kcl" }
pico-args = "0.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
