[package]
name = "kcl-to-core"
description = "Utility methods to convert kcl to engine core executable tests"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/KittyCAD/modeling-app"

[lib]

[dependencies]
anyhow = "1"
kittycad = { workspace = true, features = ["clap"] }
kcl-lib = { path = "../kcl" }
async-trait = "0.1.81"
tokio = { version = "1.38", features = ["full", "time", "rt", "tracing"] }
uuid = { version = "1.9.1", features = ["v4", "js", "serde"] }
