[package]
name = "kcl-lib-fuzz"
version = "0.0.0"
publish = false
edition = "2021"
repository = "https://github.com/KittyCAD/modeling-app"
rust-version = "1.73"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.kcl-lib]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[workspace.lints.clippy]
assertions_on_result_states = "warn"
dbg_macro = "warn"
iter_over_hash_type = "warn"
lossy_float_literal = "warn"

[profile.release]
debug = 1

[[bin]]
name = "parser"
path = "fuzz_targets/parser.rs"
test = false
doc = false
